부산대 BE_정진택 4주차 과제(1단계) (#188)
* Update README.md

* feat: Category 엔티티 추가

* feat: Product 엔티티 수정

* feat: Product와 Category 연관관계 설정

* feat: CategoryController 추가

* feat: CategoryService 작성

* feat: CategoryRepository 생성 및 Service 수정

* feat: service에 transactional 추가

* Category Request 생성

* CategoryService 예외처리

* style: 코드 포맷팅

* feat: Product Service 수정

* refactor: wishlist-add-form 수정

* docs: product-list 수정

* docs: product-add-form 수정

* docs: product-edit-form 수정

* feat: CategoryServiceTest 작성

* feat: ProductServiceTest 수정

* feat: CategorySpringDataJapRepositoryTest 작성

* feat: ProductSpringDataJpaRepositoryTest 작성

* feat: WishlistSpringDataJpaRepositoryTest 수정

* feat: WishlistServiceTest 수정

* refactor: ProductResponse 수정

* refactor: Product 생성자 추가

* refactor: Category 및 Member ServiceTest 수정

* refactor: 엔티티 생성자 수정

* refactor: ProductServiceTest 수정

* fix: 레포지토리 테스트 오류 수정